2013-05-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid unnecessary command line globbing in GUI applications.

	* src/guimain.cpp src/guistub.cpp (_CRT_glob): Declare as extern "C";
	initialise to zero, so overriding the runtime start-up default.

	* src/rites.c [! IMPLEMENT_INITIATION_RITES] (_CRT_glob): Initialise
	to zero here too; lastrites.exe doesn't need globbing either.

2013-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Address some GCC-4.7 string initialisation warnings.

	* src/pkglist.cpp (AppWindowMaker::InitPackageListView): Declare all
	headings[].text initialisers as 'const'; cast to 'char *' as required.
	(pkgListViewMaker::Dispatch): Ditto, when inserting the 'const' empty
	string into the list, as a component class value.

	* src/pkgdata.cpp (AppWindowMaker::InitPackageTabControl): Declare all
	TabLegend[] initialisers as 'const'; cast to 'char *' as required.

2013-05-02  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct a spin wait thread synchronisation issue.

	* src/pkgnget.cpp (pkgDownloadMeterGUI::SpinWait): Handle stop
	requests explicitly; acknowledge when waiting thread has stopped.
	(pkgDownloadMeterGUI::SpinWaitAction): Raise explicit stop requests;
	wait for acknowledgement that waiting thread has stopped.

2013-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Select compressed data streaming filters for use by setup tool.

	* src/pkgstrm.cpp [IMPLEMENTATION_LEVEL != PACKAGE_BASE_COMPONENT]:
	Exclude the implementations of all decompression filters, except...
	(pkgXzArchiveStream): ...this, together with its requisite methods...
	(pkgArchiveStream, pkgLzmaArchiveStream): ...from these.

2013-04-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Adapt internet download agent for use by setup tool.

	* src/pkgbase.h: More code rearrangement, exposing...
	(safe_strcmp): ...this in any implementation context, controlled...